# struct-frame

./: .coverage  .gitignore  .gitmodules  404.html  AI_TESTING_GUIDE.md  CHANGELOG.md  CROSS_PLATFORM_TEST_SUMMARY.md  DEVGUIDE.md  NAMING_COMPARISON_TABLE.md  NAMING_REVIEW.md  NAMING_REVIEW_INDEX.md  NAMING_REVIEW_SUMMARY.md  POLYGLOT_PARSER_STATUS.md  README  README.md  RELEASE.md  REVIEW.md  REVIEW_REQUEST.md  biostream.proto  eslint.config.mjs  index.html  index.ts  main.c  messages.proto  mkdocs.yml  myl_vehicle.proto  package-lock.json  package.json  pyproject.toml  sitemap-0.xml  sitemap-index.xml  sitemap.xml  test_all.py  test_frame_formats.py  test_python_arrays.py  tsconfig.json
.claude/: settings.local.json
.github/: copilot-instructions.md
404/: index.html
_astro/: index.AuV7Ihav.css
c/: biostream.sf_old.h  myl_vehicle.sf.h  myl_vehicle.sf_old.h  struct_frame.h  struct_frame_gen.h  struct_frame_parser.h  struct_frame_types.h
docs/: .gitignore  404.md  Home.md  OUTLINE.md  _Sidebar.md  astro.config.mjs  development.md  framing.md  imports.md  index.md  installation.md  message-definitions.md  package-lock.json  package.json  testing.md
examples/: frame_format_profiles.py  frame_formats.proto  frame_formats.proto.backup  generic_robot.sf  import_example.sf  index.ts  minimal_frames_example.py  myl_vehicle.proto
generator/: c_gen.py  nanopb_generator.py  nanopb_generator_base.py  ts_gen.py
new_generator/: base.py  c_gen.py  generator.py  requirements.txt  ts_gen.py
tests/rust/fuzz/: Cargo.toml
tests/rust/fuzz/fuzz_targets/: parser.rs
(+1179 files in other folders)
